@@ -45,7 +45,7 @@ public class AdminLogQueryTest extends BaseTestCase {
         Long startTime = cal.getTimeInMillis();
         Long endTime = startTime + 3 * 24 * 60 * 60 * 1000; // 3 days later
         AdminLogQuery query = new AdminLogQuery(versionList, startTime, endTime);
-        Long fourHours = new Long(4 * 60 * 60 * 1000);
+        Long fourHours = Long.valueOf(4 * 60 * 60 * 1000);
         query.moveTimePeriodBackward(fourHours); // 4 hours before endTime
         long expectedEndTime = startTime - 1;
         long expectedStartTime = expectedEndTime - fourHours;
